Moved logs to Freemarker